# haca

./: CMakeLists.txt  manifest.json.in
data/: CMakeLists.txt  com.ubuntu.developer.doflah.haca_nhlscope-settings.ini  com.ubuntu.developer.doflah.haca_nhlscope.ini.in
include/api/: client.h  config.h
include/scope/: query.h
po/: POTFILES.in  haca.pot
src/: CMakeLists.txt
src/api/: client.cpp
src/scope/: preview.cpp  query.cpp  scope.cpp
